Add state_class: measurement to pending updates

--- a/packages/update/sensor_pending_updates.yaml
+++ b/packages/update/sensor_pending_updates.yaml
@@ -9,6 +9,7 @@ template:
               | list
               | count
           }}
+        state_class: measurement
         attributes:
           entities: |
             {{ 
