--- a/automations.yaml
+++ b/automations.yaml
@@ -3162,7 +3162,7 @@
       entity_id: input_select.modes_de_presence_de_la_maison_v2
   mode: single
 - id: '1727987264453'
-  alias: Modes de presence de la maison - Arrivée en cours via Occupation de la maison
+  alias: 'Modes de presence de la maison - Arrivée en cours via Occupation de la maison '
   description: ''
   triggers:
   - trigger: state
